# USTB-QGXF

./: .gitignore  Build.py  Main.py  README.md  pyproject.toml
samples/: README.md
samples/api-v1/: exam-examInfo.json  exam-examLessonList.json  exam-examRecordDetail.json  exam-startExam.json  exam-startLessonExam.json  exam-submitExam.json  lesson-lessonVideoDetail.json  lesson-lessonVideos.json  lesson-myLesson.json  user-examStatus.json  user-getCaptcha.json  user-login.json  user-userInfo.json
src/: Captcha.py  Cipher.py  Config.py  Enums.py  Exceptions.py  GlobalMethods.py  TerminalUI.py
src/data/: Config.py  Enums.py  Question.py
src/utils/: Captcha.py  Cipher.py  Randomness.py  TerminalUI.py
