[project]
name = "USTB-QGXF"
version = "2.2.0"
description = "Auto complete USTB QiangGuoXianFeng series lessons"
authors = [
    {name = "Harry Huang", email = "harryhuang2652@qq.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
     "Pillow (~=9.5)",
     "pycryptodome (~=3.22)",
     "requests (~=2.32)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "PyPI-Tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.group.dev.dependencies]
toml = "0.10.2"
pyinstaller = "6.12.0"

[tool.build]
build-dir = "$project$\\build"
entry = "$project$\\Main.py"
log-level = "WARN"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
